--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+:root {
+  --navpad: 13vw;
+  --deffont: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --square: 33vw;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.Navbar {
+  display: flex;
+  justify-content: space-between;
+  padding-left: var(--navpad);
+  padding-right: var(--navpad);
+  align-items: center;
+  align-content: center;
+  background-color: white;
+}
+
+.Navbar ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0px;
+  margin-bottom: 0.5vh;
+}
+.Navbar li {
+  padding-left: 1vw;
+  padding-right: 1vw;
+  font-size: 2vh;
+}
+.Navbar a {
+  text-decoration: none;
+  font-family: var(--deffont);
+  color: black;
+}
+
+.Navbar a:hover {
+  color: orange;
+}
+
+.logo {
+  font-family: var(--deffont);
+  font-weight: bold;
+  font-size: 3vh;
+  margin: 0px;
+  margin-bottom: 0.5vh;
+}
+
+.Thumbnail {
+  border: solid 2px black;
+  height: 49vh;
+  max-height: 49vh;
+  text-align: center;
+}
+.Thumbnail .centred {
+  left: 50%;
+  top: 43%;
+  transform: translate(-50%, -43%);
+}
+.centred {
+  text-align: center;
+  position: absolute;
+  max-width: 50vw;
+  max-height: 20vh;
+  overflow: hidden;
+}
+.centred p {
+  font-size: calc(0.9vw + 0.9vh);
+  margin: 0px;
+}
+
+.centred h1 {
+  font-size: calc(2.3vw + 2.3vh);
+  margin: 0px;
+}
+
+.bar {
+  width: var(--square);
+  height: 33vh;
+  border: solid black 2px;
+}
+
+.bar .centred {
+  right: 11%;
+  bottom: 17%;
+  transform: translate(-50%, -3%);
+}
+
+.rooms {
+  width: var(--square);
+  height: 33vh;
+  border: solid black 2px;
+}
+.rooms .centred {
+  left: 50%;
+  bottom: 17%;
+  transform: translate(-50%, -20%);
+}
+
+.contact {
+  width: var(--square);
+  height: 33vh;
+  border: solid black 2px;
+}
+.contact .centred {
+  left: 8%;
+  bottom: 17%;
+  transform: translate(-7%, -20%);
+}
+
+.footer {
+  height: 9vh;
+  border: solid black 2px;
+  margin: 0px;
+  padding: 0px;
+
+  text-align: center;
 }
